<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ln_item"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:textColor="@color/colorTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/xac_nhan"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingLeft="16dp"
            android:gravity="center"
            android:text="@string/ban_co_muon_xoa"
            android:textColor="@color/colorTextContentDialog"
            android:textSize="16sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp">

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_marginRight="16dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_ok"
                android:text="Delete"
                android:textAllCaps="false"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btn_close"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_close"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="#ffffff" />
        </TableRow>


    </LinearLayout>


</LinearLayout>