<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.MainActivity">

    <EditText
        android:id="@+id/edt_conten_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@color/colorPick1"
        android:hint="@string/noi_dung_ghi_nho"
        android:isScrollContainer="true"
        android:maxLines="3"
        android:padding="16dp"
        android:scrollbars="vertical"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText" />

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

    </DatePicker>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:text="@string/mau_nen"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <View
            android:id="@+id/note_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@color/colorPick1" />

        <View
            android:id="@+id/note_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@color/colorPick2" />

        <View
            android:id="@+id/note_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@color/colorPick3" />

        <View
            android:id="@+id/note_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@color/colorPick4" />

        <View
            android:id="@+id/note_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@color/colorPick5" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_create_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.8"
        android:background="@color/colorBgButton"
        android:text="@string/tao_ghi_nho"
        android:textColor="@color/colorText" />

</LinearLayout>
